<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_enquiry_form"
            android:icon="@drawable/ic_launcher_form"
            android:title="@string/enquiry_form" />
        <!--  <item
              android:id="@+id/nav_transaction_history"
              android:title="@string/transaction_history" />-->

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_launcher_order"
            android:title="@string/orders" />

        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_launcher_acount"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_companyurl"
            android:icon="@drawable/ic_launcher_web"
            android:title="@string/company_url" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_launcher_conatctus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_launcher_signout"
            android:title="@string/signout" />
    </group>
</menu>