<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_enquiry_form"
        style="@style/MyToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0.2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical"
            android:padding="@dimen/mar_20"
            tools:context="com.autokartz.autokartz.fragments.EnquiryFormFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_5"
                android:text="@string/brand"
                android:textColor="@color/appcolorblue"
                android:textSize="@dimen/textSize24sp" />

            <Spinner
                android:id="@+id/carbrand_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar__8"
                android:layout_marginRight="@dimen/mar__10"
                android:layout_marginTop="@dimen/mar_10"
                android:entries="@string/brand" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/mar_0_2"
                android:layout_marginTop="@dimen/mar_2"
                android:background="@color/Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_15"
                android:text="@string/model"
                android:textColor="@color/appcolorblue"
                android:textSize="@dimen/textSize24sp" />

            <Spinner
                android:id="@+id/modelcar_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar__8"
                android:layout_marginRight="@dimen/mar__10"
                android:layout_marginTop="@dimen/mar_10"
                android:entries="@string/model" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/mar_0_2"
                android:layout_marginTop="@dimen/mar_2"
                android:background="@color/Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_15"
                android:text="@string/variant"
                android:textColor="@color/appcolorblue"
                android:textSize="@dimen/textSize24sp" />

            <Spinner
                android:id="@+id/variant_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar__8"
                android:layout_marginRight="@dimen/mar__10"
                android:layout_marginTop="@dimen/mar_10"
                android:entries="@string/year" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/mar_0_2"
                android:layout_marginTop="@dimen/mar_2"
                android:background="@color/Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="@dimen/mar_15"
                android:text="@string/engine"
                android:textColor="@color/appcolorblue"
                android:textSize="@dimen/textSize24sp" />

            <Spinner
                android:id="@+id/engine_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar__8"
                android:layout_marginRight="@dimen/mar__10"
                android:layout_marginTop="@dimen/mar_10"
                android:entries="@string/year" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/mar_0_2"
                android:layout_marginTop="@dimen/mar_2"
                android:background="@color/Black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_15"
                android:text="@string/year"
                android:textColor="@color/appcolorblue"
                android:textSize="@dimen/textSize24sp" />

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mar__8"
                android:layout_marginRight="@dimen/mar__10"
                android:layout_marginTop="@dimen/mar_10"
                android:entries="@string/year" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/mar_0_2"
                android:layout_marginTop="@dimen/mar_2"
                android:background="@color/Black" />

            <Button
                android:id="@+id/carsubmit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mar_30"
                android:layout_marginLeft="@dimen/mar_5"
                android:layout_marginRight="@dimen/mar_5"
                android:layout_marginTop="@dimen/mar_35"
                android:background="@color/appcolorornage"
                android:text="@string/submit"
                android:textColor="@color/WhiteSmoke"
                android:textSize="@dimen/textSize20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>